--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,8 +48,8 @@ target_link_libraries(progetto PRIVATE sfml-graphics)
 if (BUILD_TESTING)
 
   # aggiungi l'eseguibile progetto.t
-  # add_executable(progetto.t src/main.t.cpp src/objects.t.cpp)
+  # add_executable(baba.tests Tests/baba_is_tests.cpp)
   # aggiungi l'eseguibile progetto.t alla lista dei test
-  #add_test(NAME progetto.t COMMAND progetto.t)
+  # add_test(NAME baba.tests COMMAND baba.tests)
 
 endif()
